# Ejercicios-1

./: CMakeLists.txt  CalcularFactorialWhile.cpp  ElegirEjercicios.cpp  MayorDeDos.cpp  MayorDeEdad.cpp  NombreDelDiaSwitch.cpp  NumeroParOImpar.cpp  NumerosImparesFor.cpp  NumerosImparesWhile.cpp
